apps/blog/src/content/docs/v2/concepts/trees.mdx
---
title: Trees
---

Hierarchical, ordered entries — sidebars, taxonomies, nav menus.

## Custom views

Use `views: (view) => ({ default: view({}), name: view({ ... }) })`, the same syntax as collections.
This helper offers only `resolveRelations` and `augment`. Filtering and sorting
are unavailable and are rejected by TypeScript and at runtime.

```ts
views: (view) => ({
  default: view({}),
  preview: view({
    resolveRelations: false,
    augment: (entry) => ({ label: entry.title.toUpperCase() }),
  }),
  raw: view({}),
});
```

This example assumes a schema with a `title` string. Callback inputs, augmented
fields, and view names are inferred. Select `preview` with
`getEntry(slug, { view: "preview" })`.

The factory runs once at creation. Each custom view is independent. When views
are supplied, `default` is required; omitted getter selection and
`{ view: "default" }` select it. Views can be omitted entirely for validated
entries with raw relation references and no augmentation. Resolution and
augmentation can only be configured inside views, never at the root.
The old `views: { name: { ... } }` form is no longer supported; each named
configuration must be wrapped in `view(...)`.
